# ralph-orchestrator

./: AGENTS.md  pyproject.toml
.github/workflows/: ci.yml
crates/ralph-adapters/src/: cli_backend.rs  stream_handler.rs
crates/ralph-cli/src/: main.rs
file_organizer/: pyproject.toml
file_organizer/src/file_organizer/: __init__.py  cli.py  file_organizer.py
file_organizer/src/file_organizer/organizers/: __init__.py  document_organizer.py  downloads_organizer.py  photo_organizer.py
file_organizer/src/file_organizer/utils/: __init__.py  backup.py  config.py
file_organizer/tests/: test_backup.py  test_cli.py  test_config.py  test_document_organizer.py  test_file_organizer.py  test_photo_organizer.py
src/ralph_orchestrator/adapters/: claude.py
